kubernetes/deployment.yaml

# Copyright

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron1
spec:
  selector:
    matchLabels:
      app: dron1
  template:
    metadata:
      labels:
        app: dron1
        version: 0.1.0-dron
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: blazejczuk/drony:headers
        ports:
        - containerPort: 3000
          name: http-dron1-svc
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron2
spec:
  selector:
    matchLabels:
      app: dron2
  template:
    metadata:
      labels:
        app: dron2
        version: 0.1.0-dron
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: blazejczuk/drony:headers
        ports:
        - containerPort: 3000
          name: http-dron2-svc
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron3
spec:
  selector:
    matchLabels:
      app: dron3
  template:
    metadata:
      labels:
        app: dron3
        version: 0.1.0-dron
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: blazejczuk/drony:headers
        ports:
        - containerPort: 3000
          name: http-dron3-svc
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron4
spec:
  selector:
    matchLabels:
      app: dron4
  template:
    metadata:
      labels:
        app: dron4
        version: 0.1.0-dron
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: blazejczuk/drony:headers
        ports:
        - containerPort: 3000
          name: http-dron4-svc
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dron5
spec:
  selector:
    matchLabels:
      app: dron5
  template:
    metadata:
      labels:
        app: dron5
        version: 0.1.0-dron
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: blazejczuk/drony:0.7  ## BEZ pingowania
        ports:
        - containerPort: 3000
          name: http-dron5-svc
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
