kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dron1
spec:
  type: ClusterIP
  selector:
    app: dron1
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http-dron1-svc
    
# kubectl -n default port-forward svc/dron1 8081:3000

---
apiVersion: v1
kind: Service
metadata:
  name: dron2
spec:
  type: ClusterIP
  selector:
    app: dron2
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http-dron2-svc

# kubectl -n default port-forward svc/dron2 8082:3000

---
apiVersion: v1
kind: Service
metadata:
  name: dron3
spec:
  type: ClusterIP
  selector:
    app: dron3
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http-dron3-svc

---
apiVersion: v1
kind: Service
metadata:
  name: dron4
spec:
  type: ClusterIP
  selector:
    app: dron4
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http-dron4-svc
