kubernetes/drony-gateway.yml
#https://www.baeldung.com/ops/istio-service-mesh

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dron1-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dron1-gateway-servive
spec:
  hosts:
    - "*"
  gateways:
    - dron1-gateway
  http:
  - match:
    - uri:
        prefix: /dron1/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dron1
        port:
          number: 3000
  - match:
    - uri:
        prefix: /dron2/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dron2
        port:
          number: 3000
  - match:
    - uri:
        prefix: /dron3/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dron3
        port:
          number: 3000
  - match:
    - uri:
        prefix: /dron4/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dron4
        port:
          number: 3000
  - match:
    - uri:
        prefix: /dron5/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dron5
        port:
          number: 3000
